clang/test/BSC/Negative/Ownership/owned_CStyleCast_typedef/owned_CStyleCast_typedef.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

typedef int* owned myInt;

void test () {
    int x = 10;
    int* p = &x;
    myInt p1 = (myInt)p;
} // expected-error {{p1's memory will leak at the end of scope}}